# rust-analyzer-wasm

./: .editorconfig  .gitignore  Cargo.toml  README.md  bors.toml
.github/workflows/: ci.yaml  netlify.yaml
ra-wasm/: Cargo.toml
ra-wasm/.cargo/: config
ra-wasm/src/: lib.rs  return_types.rs  semantic_tokens.rs  to_proto.rs
rust-pack/: Cargo.toml
rust-pack/src/: main.rs  remove_function.rs
src/: conv.rs  lib.rs  return_types.rs  to_proto.rs
www/: .gitignore  example-code.js  example-code.rs  index.js  package-lock.json  package.json  ra-worker.js  rust-grammar.js  webpack.config.js
