[package]
name = "wasm_demo"
version = "0.1.0"
authors = ["rust-analyzer developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
dev = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
log = { version = "0.4.14", features = ["release_max_level_warn"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_repr = "0.1.6"
serde-wasm-bindgen = "0.1.3"
stacker = "0.1.13"
wasm-bindgen = "0.2.72"
wasm-bindgen-rayon = "1.0.1"

ide = { git = "https://github.com/rust-analyzer/rust-analyzer", rev = "27befe6c7" }
ide_db = { git = "https://github.com/rust-analyzer/rust-analyzer", rev = "27befe6c7" }